# NRMC2019

./: .directory  .gitignore  .travis.yml  README.md  env.sh  out_camera_data.xml
src/autonomy/frosty/: CMakeLists.txt  package.xml
src/autonomy/frosty/include/frosty_state_machine/: frosty_state_machine.h
src/autonomy/frosty/launch/: sim_all_autonomoy.launch  sim_drive_autonomy.launch
src/autonomy/frosty/src/: frosty.cpp
src/autonomy/frosty/src/frosty_state_machine/: frosty_state_machine.cpp
src/controls/competition/: CMakeLists.txt  package.xml
src/controls/competition/config/: mechatronics_config.yaml  mechatronics_test_config.yaml  rmc_config.yaml  track_config.yaml
src/controls/competition/include/competition/: competition_config.h  competition_controller.h  config.h  controller.h  joy.h  visuals.h  waypoint_visuals.h
src/controls/competition/launch/: competition.launch  config_test.launch
src/controls/competition/msg/: Debug.msg  Time.msg
src/controls/competition/src/: bezier_visuals.cpp  competition_config.cpp  competition_controller.cpp  competition_node.cpp  config.cpp  config_test_node.cpp  controller.cpp  controller_node.cpp  joy.cpp  visuals.cpp  visuals_test_node.cpp  waypoint_visuals.cpp
src/controls/dig_control/: CMakeLists.txt  package.xml
src/controls/dig_control/action/: DigControl.action
src/controls/dig_control/include/dig_control/: config.h  dig_control_client.h  dig_control_server.h  dig_controller.h  dig_controller_interface.h  dig_controller_sim.h  dig_params.h
src/controls/dig_control/include/dig_dump_action/: dig_dump_action.h
src/controls/dig_control/launch/: dig_control.launch  dig_master.launch  dig_test.launch
src/controls/dig_control/msg/: Debug.msg  DrivePositions.msg  DriveValues.msg  Duty.msg  State.msg  StateString.msg
src/controls/dig_control/src/: config.cpp  dig_control_client.cpp  dig_control_client_example.cpp  dig_control_client_node.cpp  dig_control_server.cpp  dig_controller.cpp  dig_controller_sim.cpp  dig_teleop.cpp  hoe_master.cpp  record_dig_cycle.cpp
src/controls/dig_control/src/backhoe_controller/: backhoe_controller.cpp
src/controls/dig_control/src/dig_dump_action/: dig_dump_action.cpp
src/controls/dig_control/src/tests/: dig_control_server_integration_test.cpp  dig_controller_tests.cpp
src/controls/dig_control_2/: CMakeLists.txt  package.xml
src/controls/dig_control_2/include/dig_control_2/: dig_params.h
src/controls/dig_control_2/launch/: dig_teleop.launch
src/controls/dig_control_2/src/: dig_controller.cpp  dig_teleop.cpp
src/controls/dig_control_2/src/tests/: dig_controller_tests.cpp
src/controls/drive_controller/: CMakeLists.txt  package.xml
src/controls/drive_controller/action/: DriveControl.action
src/controls/drive_controller/include/drive_controller/: drive_control_client.h  drive_control_server.h  drive_control_states.h  (+1 more)
src/controls/drive_controller/launch/: drive_controller.launch  vrep_drive_controller.launch
src/controls/drive_controller/msg/: PathInfo.msg
src/controls/drive_controller/src/: drive_controller_master.cpp
src/controls/drive_controller_msgs/: CMakeLists.txt  package.xml
src/controls/drive_controller_msgs/msg/: ErrorStates.msg  StateVector.msg  WheelStates.msg
src/controls/drive_controller_visualization/: CMakeLists.txt  mainpage.dox  package.xml
src/controls/drive_controller_visualization/src/: drive_controller_visualization_master.cpp  main.cpp  main_window.cpp  qnode.cpp
src/controls/new_visualization/: CMakeLists.txt  package.xml
src/controls/new_visualization/src/: drive_controller_vis_master.cpp
src/controls/nrmc_control/: CMakeLists.txt  package.xml
src/controls/nrmc_control/src/: controller.cpp  controller_node.cpp  joy.cpp
src/controls/teleop/: CMakeLists.txt  package.xml
src/controls/teleop/launch/: teleop_joy.launch  teleop_robot.launch
src/controls/teleop/src/: teleop.cpp  teleop_node.cpp
src/controls/visualization/: CMakeLists.txt  package.xml  setup.py
src/controls/visualization/scripts/: drive_controller_plot.py
src/controls/waypoint_control/: CMakeLists.txt  package.xml
src/controls/waypoint_control/action/: WaypointControl.action
src/controls/waypoint_control/config/: drive_profiles.yaml
src/controls/waypoint_control/launch/: waypoint_control.launch
src/controls/waypoint_control/msg/: Debug.msg  Feedback.msg  FeedbackInfo.msg  Waypoint.msg
src/description/: CMakeLists.txt  package.xml
src/description/config/: arena.rviz
src/description/docs/: robot_stats.txt  robot_weights.txt
src/description/launch/: load_robot_and_arena.launch  rviz.launch  test_urdf.launch
src/description/meshes/: arena.dae  backhoe_bucket.stl  backhoe_monoboom.stl  battery_box.stl  central_drive.stl  computer_box.stl  frame.stl  gravel_bucket.stl  left_flap.stl  left_tracker.stl  nodey_camera.stl  right_flap.stl  right_nodey.stl  wheel.stl
src/description/urdf/: arena.urdf  robot.urdf
src/description/vrep_models/: arena.ttt  arena_with_floor.ttm  robot.ttm
src/gui/tracker_gui/: CMakeLists.txt  package.xml
src/gui/tracker_gui/src/: main.cpp  tracker_gui.cpp
src/gui/tracker_gui/ui/: tracker_gui.ui
src/hardware_layer/camera_calibration/: CMakeLists.txt  package.xml
src/hardware_layer/camera_calibration/config/: left_calibration_config.xml  right_calibration_config.xml  right_camera_data.xml
src/hardware_layer/camera_calibration/src/: camera.cpp  camera_calibration.cpp  camera_info.cpp  ocam_camera.cpp  record_images.cpp  utility.cpp
src/hardware_layer/driver_access/: CMakeLists.txt  package.xml
src/hardware_layer/lpms_imu/: CMakeLists.txt
src/hardware_layer/lpms_imu/src/: lpms_imu_node.cpp
src/utilities/: CMakeLists.txt  package.xml
src/utilities/ansible/: common_tasks.yml  dev_computer_playbook.yml  dev_computer_test.yml
src/utilities/config/: 99-robot.rules  issue.net
src/utilities/include/utilities/: config.h  filter.h  joy.h  utilities.h
src/utilities/scripts/: 99-robot.rules  bringup_can.sh  env_robot.bash  robot_transfer.sh
src/utilities/src/: config.cpp  joy.cpp  utilities.cpp
(+518 files in other folders)
