<?xml version="1.0"?>
<package format="2">
  <name>description</name>
  <version>0.0.0</version>
  <description>The description package</description>
  <maintainer email="jacob.huesman@ndsu.edu">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
</package>
