<?xml version="1.0"?>
<package format="2">
  <name>utilities</name>
  <version>0.0.0</version>
  <description>The util package</description>
  <maintainer email="jacob.huesman@ndsu.edu">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
