<?xml version="1.0"?>
<package format="2">
  <name>frosty_autonomy</name>
  <version>0.0.1</version>
  <description>
    The 2019 autonomy package.
  </description>
  <maintainer email="todo@no.never">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
