<?xml version="1.0"?>
<package format="2">
  <name>frosty_autonomy</name>
  <version>0.0.1</version>
  <description>
    The 2019 autonomy package.
  </description>
  <maintainer email="todo@no.never">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>navigation_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>vrep_msgs</depend>
  <depend>std_srvs</depend>

</package>
