<?xml version="1.0"?>
<package format="2">
  <name>dig_control</name>
  <version>0.0.0</version>
  <description>The dig_control package</description>
  <maintainer email="nrmc@todo.todo">nrmc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
