<?xml version="1.0"?>
<package format="2">
  <name>dig_control</name>
  <version>0.0.0</version>
  <description>The dig_control package</description>
  <maintainer email="jacob.huesman@ndsu.edu">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>vesc_access</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
</package>
