<?xml version="1.0"?>
<package format="2">
  <name>dig_control_2</name>
  <version>0.0.0</version>
  <description>The dig_control_2 package</description>
  <maintainer email="jacob@todo.todo">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscppp</depend>
  <depend>vesc_access</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
