<?xml version="1.0"?>
<package format="2">
  <name>drive_controller</name>
  <version>0.0.0</version>
  <description>The drive_controller package</description>
  <maintainer email="fu@todo.todo">fu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>vesc_access</depend>
  <depend>driver_access</depend>
  <depend>localization</depend>
  <depend>cv_bridge</depend>
  <depend>navigation_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
</package>
