<package>
  <name>drive_controller_msgs</name>
  <description>drive_controller messages</description>
  <maintainer email="who_r_you@you.yesyou">Me</maintainer>
  <version>0.0.1</version>
  <author>Me</author>
  <license>CopyDown</license>
  <url>http://www.github.com/bisonrobotics</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


